Revert "Merge pull request #24344 from vespa-engine/bratseth/return-ignored-fields"
This reverts commit 7438b33d2447f5348e25c18160a592924130ee25, reversing
changes made to 973c8f0aaf9d755aebd2c9a6c2226fc81dc1b183.